--- a/vaadin-damo/pom.xml
+++ b/vaadin-damo/pom.xml
@@ -11,7 +11,7 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-
+        <java.version>1.8</java.version>
         <vaadin.version>14.1.25</vaadin.version>
 
         <drivers.dir>${project.basedir}/drivers</drivers.dir>
