--- a/vaadin-damo/pom.xml
+++ b/vaadin-damo/pom.xml
@@ -123,6 +123,12 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.18</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.seovic.maven.plugins/npm-maven-plugin -->
+        <dependency>
+            <groupId>com.seovic.maven.plugins</groupId>
+            <artifactId>npm-maven-plugin</artifactId>
+            <version>1.0.4</version>
+        </dependency>
         <dependency>
             <groupId>com.vaadin</groupId>
             <artifactId>vaadin-testbench</artifactId>
